# project-template

./: .env.example  .gitignore  README.md  docker-compose.yml  mcp-rules.md  pyproject.toml  pyrightconfig.json  requirements.txt  test-strategy.py
.devcontainer/: .dockerignore  QUICKSTART.md  README.md  devcontainer.json  docker-compose.yml
docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml  start.sh
podman/: README.md  jesse-postgresql.container  jesse-redis.container  jesse.container
storage/logs/optimize-mode/: fb232505-2e07-4404-8766-a823ffa13b2b.txt
