[tool.poetry]
name = "renten-bot"
version = "0.1.0"
description = ""
authors = ["Andy <andy@freilandkiwis.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jesse = "^0.46.1"
icecream = "^2.1.3"
numba = "^0.59.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
